Finalizado estilo de tela de novo caso

--- a/frontend/src/pages/NewIncident/styles.css
+++ b/frontend/src/pages/NewIncident/styles.css
@@ -1,14 +1,14 @@
-.register-container {
+.incident-container {
   width: 100%;
   max-width: 1120px;
   height: 100vh;
   margin: 0 auto;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
-.register-container .content {
+.incident-container .content {
   width: 100%;
   padding: 96px;
   background: #f0f0f5;
@@ -18,35 +18,32 @@
   align-items: center;
 }
 
-.register-container .content section {
+.incident-container .content section {
   width: 100%;
   max-width: 380px;
 }
 
-.register-container .content section h1 {
+.incident-container .content section h1 {
   margin: 64px 0 32px;
   font-size: 2rem;
 }
 
-.register-container .content section p {
+.incident-container .content section p {
   font-size: 1.2rem;
   color: #737380;
   line-height: 32px;
 }
 
-.register-container .content form {
+.incident-container .content form {
   width: 100%;
   max-width: 450px;
 }
 
-.register-container .content form input {
+.incident-container .content form input {
   margin-top: 8px;
 }
 
-.register-container .content form .input-group {
-  display: flex;
-}
-
-.register-container .content form .input-group input + input {
-  margin-left: 4px;
+.incident-container .content form textarea {
+  margin-top: 8px;
+  resize: vertical;
 }
