--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
 * {
   margin: 0;
@@ -9,16 +9,18 @@
 
 body {
   font-weight: 400;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   background: #f0f0f5;
   -webkit-font-smoothing: antialiased;
 }
 
-input, button, textarea {
+input,
+button,
+textarea {
   font-weight: 400;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px; 
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
 }
 
 button {
@@ -32,10 +34,18 @@ form input {
   border: 1px solid #dcdce6;
   border-radius: 8px;
   padding: 0 24px;
-  
+}
+
+form textarea {
+  width: 100%;
+  min-height: 140px;
+  color: #333;
+  border: 1px solid #dcdce6;
+  border-radius: 8px;
+  padding: 26px 24px;
 }
 .button {
-  width: 100%;    
+  width: 100%;
   height: 60px;
   background: #e02041;
   border: 0;
@@ -72,9 +82,3 @@ form input {
 .back-link:hover {
   opacity: 0.8;
 }
-
-
-
-
-
-
